--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,117 @@
+body {
+    margin: 0;
+  }
+
+.nav {
+    padding: 10px;
+    background-color: lightseagreen;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .nav > a {
+    color: #fff;
+    margin: 0 40px;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    transition: opacity 0.2s ease-in-out;
+  }
+
+  .nav > a:hover {
+    opacity: 0.5;
+  }
+
 .content {
     display: flex;
     flex-direction: column;
+    align-items: center;
+
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    text-shadow: 1px 1px lightgrey;
 }
+
+@keyframes slideIn {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+#hangwoman-title {
+    animation: slideIn 1s ease-in-out;
+}
+
+#answer {
+    animation: slideIn 2s ease-in-out;
+}
+
+#guesses-title {
+    font-weight: bolder;
+    animation: slideIn 3s ease-in-out;
+}
+
+#newgame-content {
+    display: flex;
+    justify-content: center;
+}
+
+#play-again {
+    display: none;
+    padding: 20px;
+    border: 0;
+    background-color: rgb(42, 214, 226);
+    color: white;
+    box-shadow: 0px 2px 12px 2px #a5a5a5;
+    border-radius: 6px;
+    font-size: 1rem;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+@keyframes bounce {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+
+    80% {
+        transform: scale(1.2) rotate(290deg);
+    }
+
+    90% {
+        transform: scale(0.8 rotate(320deg));
+    }
+
+    to {
+        transform: scale(1) rotate(360deg);
+    }
+}
+
+#winner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#youWin {
+    display: none;
+}
+
+#hana {
+    display: none;
+    border-radius: 7px;
+    box-shadow: 0px 2px 12px 2px #a5a5a5;
+    max-width: 300px;
+    height: 100%;
+}
+
+#play-again:hover {
+    animation: bounce 1s ease-in-out;
+}
+
